@@ -394,9 +394,9 @@ public class DoubleLife extends Season {
 
         while(!playersToRoll.isEmpty()) {
             Collections.shuffle(playersToRoll);
-            ServerPlayer player1 = playersToRoll.getFirst();
+            ServerPlayer player1 = playersToRoll.get(0);
             ServerPlayer player2 = null;
-            playersToRoll.removeFirst();
+            playersToRoll.remove(0);
             for (ServerPlayer player : playersToRoll) {
                 if (Objects.equals(soulmatesPrevent.get(player1.getUUID()), player.getUUID())) continue;
                 if (Objects.equals(soulmatesPrevent.get(player.getUUID()), player1.getUUID())) continue;
